src/styles/components/Card.css
.ancillary-card + .ancillary-card {
  margin-top: 12px;
}

.ancillary-card:disabled {
  color: inherit;
  cursor: not-allowed;
  background-color: var(--GREY-100);
}

.ancillary-card--loading:disabled {
  cursor: progress;
}

.ancillary-card__expand-icon {
  color: var(--GREY-400);
  transition: color 0.3s var(--TRANSITION-CUBIC-BEZIER),
    transform 0.5s var(--TRANSITION-CUBIC-BEZIER);
  transform: scale(1);
}

.ancillary-card__children {
  text-align: start;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: var(--GREY-600);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.ancillary-card:not(:disabled):not(.ancillary-card--loading):focus {
  outline: none;
}

.ancillary-card:not(:disabled):not(.ancillary-card--loading):hover,
.ancillary-card:not(:disabled):not(.ancillary-card--loading):focus-visible {
  border-color: rgba(var(--ACCENT));
}

.ancillary-card:not(:disabled):not(.ancillary-card--loading):hover
  .ancillary-card__expand-icon,
.ancillary-card:not(:disabled):not(.ancillary-card--loading):focus-visible
  .ancillary-card__expand-icon {
  color: rgb(var(--ACCENT)) !important;
  transform: scale(1.09);
}

.ancillary-card__selected-icon {
  background-color: var(--GREEN-200);
  border-radius: 20px;
  color: rgb(var(--WHITE));
}

